--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -7,17 +7,8 @@
 
 {% block content %}
     <!-- Breadcrumb area Start -->
-    <div class="breadcrumb-area bg-color ptb--90" data-bg-color="#f6f6f6">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column">
-                        <h1 class="page-title">سبد خرید</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% trans 'Cart' as x %}
+    {% include 'includes/topheader.html' with header_name=x %}
     <!-- Breadcrumb area End -->
 
     <!-- Main Content Wrapper Start -->
@@ -105,7 +96,7 @@
                             <div class="col-sm-6 text-sm-right">
                                 <form method="post" action="{% url 'cart:clear_cart' %}">
                                     {% csrf_token %}
-                                    <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
+                                    <button type="submit" class="cart-form__btn">{% trans 'Clear the Cart' %}</button>
 
                                 </form>
                             </div>
