--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -7,19 +7,7 @@
 
 
 {% block content %}
-    <!-- Breadcrumb area Start -->
-    <div class="breadcrumb-area bg-color ptb--90" data-bg-color="#f6f6f6">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column">
-                        <h1 class="page-title">{% trans 'product detail of' %} «{{ product.title }}»</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb area End -->
+{% include 'includes/topheader.html' with header_name=product.title %}
 
     <!-- Main Content Wrapper Start -->
     <div class="main-content-wrapper">
