--- a/templates/_base.html
+++ b/templates/_base.html
@@ -90,7 +90,7 @@
                             <li class="header-toolbar__item mini-cart-item">
                                 <a href="#miniCart" class="header-toolbar__btn toolbar-btn mini-cart-btn">
                                     <i class="flaticon flaticon-shopping-cart"></i>
-                                    <sup class="mini-cart-count">2</sup>
+                                    <sup class="mini-cart-count">{{ cart|length }}</sup>
                                 </a>
                             </li>
                             <li class="header-toolbar__item user-info">
@@ -100,9 +100,10 @@
                                 <ul class="user-info-menu">
                                     {% if user.is_authenticated %}
                                         <li>
-                                            <a class="text-right" href="{% url 'account_logout' %}">{% trans 'log out' %}</a>
+                                            <a class="text-right"
+                                               href="{% url 'account_logout' %}">{% trans 'log out' %}</a>
                                         </li>
-                                         <li>
+                                        <li>
                                             <a class="text-right" href="my-account.html">{% trans 'profile' %}</a>
                                         </li>
 
@@ -196,82 +197,7 @@
     </div>
     <!-- Search form Popup End -->
 
-    <!-- Mini Cart Start -->
-    <aside class="mini-cart" id="miniCart">
-        <div class="mini-cart-wrapper">
-            <a href="" class="btn-close"><i class="flaticon flaticon-cross"></i></a>
-            <div class="mini-cart-inner">
-                <h3 class="mini-cart__heading mb--40 mb-lg--30 text-right">سبد خرید</h3>
-                <div class="mini-cart__content">
-                    <ul class="mini-cart__list text-right">
-                        <li class="mini-cart__product d-flex justify-content-between">
-                            <div class="mini-cart__product__image">
-                                <a href="#">
-                                    <img src="{% static 'img/products/prod-1-100x100.jpg' %}" alt="products">
-                                </a>
-                            </div>
-                            <div class="mini-cart__product__content pt-2">
-                                    <span class="mini-cart__product__title d-flex flex-row justify-content-between">
-                                        <a href="#"> محصول سماره یک </a>
-                                        <a href="#" class="">
-                                            &#10060;
-                                        </a>
-                                    </span>
-                                <span class="mini-cart__product__quantity">
-                                        <span>۴۹,۰۰۰ تومان</span> &#215; <span>۱</span>
-                                    </span>
-                            </div>
-                        </li>
-                        <li class="mini-cart__product d-flex justify-content-between">
-                            <div class="mini-cart__product__image">
-                                <a href="#">
-                                    <img src="{% static 'img/products/prod-1-100x100.jpg' %}" alt="products">
-                                </a>
-                            </div>
-                            <div class="mini-cart__product__content pt-2">
-                                    <span class="mini-cart__product__title d-flex flex-row justify-content-between">
-                                        <a href="#"> محصول سماره یک </a>
-                                        <a href="#" class="">
-                                            &#10060;
-                                        </a>
-                                    </span>
-                                <span class="mini-cart__product__quantity">
-                                        <span>۴۹,۰۰۰ تومان</span> &#215; <span>۱</span>
-                                    </span>
-                            </div>
-                        </li>
-                        <li class="mini-cart__product d-flex justify-content-between">
-                            <div class="mini-cart__product__image">
-                                <a href="#">
-                                    <img src="{% static 'img/products/prod-1-100x100.jpg' %}" alt="products">
-                                </a>
-                            </div>
-                            <div class="mini-cart__product__content pt-2">
-                                    <span class="mini-cart__product__title d-flex flex-row justify-content-between">
-                                        <a href="#"> محصول سماره یک </a>
-                                        <a href="#" class="">
-                                            &#10060;
-                                        </a>
-                                    </span>
-                                <span class="mini-cart__product__quantity">
-                                        <span>۴۹,۰۰۰ تومان</span> &#215; <span>۱</span>
-                                    </span>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="mini-cart__total">
-                        <span>جمع کل</span>
-                        <span class="ammount">۱۴۸,۰۰۰ تومان</span>
-                    </div>
-                    <div class="mini-cart__buttons">
-                        <a href="cart.html" class="btn btn-fullwidth btn-bg-sand mb--20">مشاهده سبد خرید</a>
-                        <a href="checkout.html" class="btn btn-fullwidth btn-bg-sand">پرداخت</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </aside>
-    <!-- Mini Cart End -->
+{% include 'includes/cart_sidebar.html' %}
 
     <!-- Global Overlay Start -->
     <div class="ShoppingYar-global-overlay"></div>
